* Added a review extension page

--- a/MitigatingCircumstances/Pages/Tutor/Applications.cshtml
+++ b/MitigatingCircumstances/Pages/Tutor/Applications.cshtml
@@ -52,10 +52,10 @@ else
                         }
                     </td>
                     <td>
-                        <button type="button" class="btn btn-info btn-sm">
+                        <a class="btn btn-info btn-sm" asp-page="./ReviewExtension" asp-route-id="@extensionRequest.Id">
                             Open
                             <i class="fas fa-external-link-alt"></i>
-                        </button>
+                        </a>
                     </td>
                 </tr>
             }
