--- a/MitigatingCircumstances/Pages/Student/CreateExtensionRequest.cshtml
+++ b/MitigatingCircumstances/Pages/Student/CreateExtensionRequest.cshtml
@@ -11,7 +11,7 @@
 }
 
 <div class="row justify-content-center">
-    <div class="col-8">
+    <div class="col-sm-12 col-xs-12 col-md-10 col-lg-7">
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title text-center">Create extension request</h5>
