--- a/MitigatingCircumstances/Pages/Student/Applications.cshtml
+++ b/MitigatingCircumstances/Pages/Student/Applications.cshtml
@@ -18,10 +18,10 @@ else
         <thead>
             <tr>
                 <th scope="col">Title</th>
-                <th scope="col">Application Form</th>
+                <th scope="col">Description</th>
+                <th scope="col">Attachments</th>
                 <th scope="col">Tutor</th>
                 <th scope="col">Status</th>
-                <th scope="col">Action</th>
             </tr>
         </thead>
         <tbody>
@@ -30,6 +30,7 @@ else
                 <tr>
                     <td>@extensionRequest.Title</td>
                     <td>@extensionRequest.Description</td>
+                    <td>@(extensionRequest.UploadedDocuments?.Count ?? 0)</td>
                     <td>@extensionRequest.TutorAssignedTo.Fullname</td>
                     <td>
                         @switch (extensionRequest.Status)
@@ -51,19 +52,13 @@ else
                                 break;
                         }
                     </td>
-                    <td>
-                        <button type="button" class="btn btn-info btn-sm">
-                            Edit
-                            <i class="far fa-edit"></i>
-                        </button>
-                    </td>
                 </tr>
             }
         </tbody>
     </table>
 }
 
-<a class="btn btn-primary float-right" asp-page="./CreateExtensionRequest">
+<a class="btn btn-outline-secondary float-right" asp-page="./CreateExtensionRequest">
     Create new
     <i class="fas fa-pen"></i>
 </a>
