--- a/MitigatingCircumstances/Pages/Student/CreateExtensionRequest.cshtml
+++ b/MitigatingCircumstances/Pages/Student/CreateExtensionRequest.cshtml
@@ -4,10 +4,6 @@
     ViewData["Title"] = "Create Extension Request";
 }
 
-@{ 
-    var isGet = HttpContext.Request.Method == "GET";
-}
-
 <div class="row justify-content-center">
     <div class="col-sm-12 col-xs-12 col-md-10 col-lg-7">
         <div class="card">
@@ -52,24 +48,23 @@
 
         <br />
 
-        @if (Model.CreateExtensionResult.Created)
-        {
-            <div class="alert alert-success alert-dismissible fade show" role="alert">
-                <strong>Nice!</strong> Your extension request titled @Model.CreateExtensionResult.Name has been created successfully
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-        }
-        else
-        {
-            <div class="alert alert-warning alert-dismissible fade show" role="alert">
-                <strong>Holy guacamole!</strong> There was an error creating your extension request
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-        }
+        <div class="progress">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%"></div>
+        </div>
+
+        <div class="alert alert-success alert-dismissible fade show" role="alert">
+            Your extension request titled <strong id="alert-text"></strong> has been created successfully
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+
+        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+            <strong>Holy guacamole!</strong> There was an error creating your extension request
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
     </div>
 </div>
 
@@ -78,9 +73,24 @@
     <script>
         $(() => {
             $("#createExtensionRequestForm").on("submit", function (e) {
-                e.submit();
-                e.reset();
-                return false;
+                e.preventDefault();
+
+                var form_data = new FormData($('#createExtensionRequestForm')[0]);
+
+                $.ajax({
+                    type: 'POST',
+                    url: '/api/extension_request/create',
+                    processData: false,
+                    contentType: false,
+                    async: false,
+                    cache: false,
+                    data: form_data,
+                    success: function (response) {
+
+                    }
+                });
+
+                $('#createExtensionRequestForm')[0].reset();
             });
         });   
     </script>
