--- a/MitigatingCircumstances/wwwroot/css/site.css
+++ b/MitigatingCircumstances/wwwroot/css/site.css
@@ -23,3 +23,11 @@
     font-size: 90%;
     font-weight: 500;
 }
+
+#formUserFeedback {
+    margin-top: 1.15rem;
+}
+
+[v-cloak] {
+    display: none;
+}
