--- a/MitigatingCircumstances/Pages/Student/Applications.cshtml
+++ b/MitigatingCircumstances/Pages/Student/Applications.cshtml
@@ -58,7 +58,7 @@ else
     </table>
 }
 
-<a class="btn btn-outline-secondary float-right" asp-page="./CreateExtensionRequest">
+<a style="margin-bottom: 1rem" class="btn btn-outline-secondary float-right" asp-page="./CreateExtensionRequest">
     Create new
     <i class="fas fa-pen"></i>
 </a>
