--- a/MitigatingCircumstances/Pages/Student/CreateExtensionRequest.cshtml
+++ b/MitigatingCircumstances/Pages/Student/CreateExtensionRequest.cshtml
@@ -47,21 +47,19 @@
         </div>
 
         <div id="formUserFeedback" v-cloak>
-            <div v-if="request.loading" class="progress">
-                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%"></div>
+            <div v-if="request.loading" class="text-center">
+                <div class="spinner-border text-primary" style="width: 2.5rem; height: 2.5rem;" role="status">
+                    <span class="sr-only">Loading...</span>
+                </div>
+                <p class="lead">Please wait...</p>
             </div>
-
-            <div v-if="initialized && request.successful" class="alert alert-success alert-dismissible fade show" role="alert">
-                Your extension request titled <strong>{{request.title}}</strong> has been created successfully
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div v-else-if="initialized && ! request.successful" class="alert alert-warning alert-dismissible fade show" role="alert">
-                <strong>Holy guacamole!</strong> There was an error creating your extension request {{request.errorMsg}}
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
+            <div v-if="initialized && ! request.loading">
+                <div v-if="request.successful" class="alert alert-success alert-dismissible show" role="alert">
+                    Your extension request titled <strong>{{request.title}}</strong> has been created successfully
+                </div>
+                <div v-else class="alert alert-warning alert-dismissible show" role="alert">
+                    There was an error creating your extension request. <strong>{{request.errorMsg}}</strong>
+                </div>
             </div>
         </div>
     </div>
@@ -70,7 +68,7 @@
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
     <script>
-        $(() => {
+        $(() => {         
             let form = $("#extensionRequestForm")[0];
             let app = new Vue({
                 el: "#formUserFeedback",
@@ -110,8 +108,7 @@
                         error: (xhr, textStatus, errorThrown) => {
                             app.request.loading = false;
                             app.request.successful = false;
-                            app.request.errorMsg = textStatus;
-                            console.log(errorThrown);
+                            app.request.errorMsg = xhr.responseText;
                         },
                         complete: (xhr) => {
                             app.initialized = true;
