--- a/MitigatingCircumstances/Pages/Tutor/ReviewExtension.cshtml
+++ b/MitigatingCircumstances/Pages/Tutor/ReviewExtension.cshtml
@@ -82,18 +82,21 @@
                 <div class="card-body">
                     <h5 class="text-center">Action</h5>
                     <label>Reply</label>
-                    <textarea class="form-control" rows="4"></textarea>
+
+                    <textarea name="replyMessage" class="form-control" rows="4"></textarea>
+                    <input name="extensionRequestId" type="hidden" value="@Model.ExtensionRequest.Id"/>
+
                     <br />
                     <p class="float-right">
-                        <button data-button-action="approve" class="btn btn-success change-extension-state">
+                        <button data-button-action="1" class="btn btn-success change-extension-state">
                             Approve
                         </button>
 
-                        <button data-button-action="reject" class="btn btn-danger change-extension-state">
+                        <button data-button-action="2" class="btn btn-danger change-extension-state">
                             Reject
                         </button>
 
-                        <button data-button-action="close" class="btn btn-secondary change-extension-state">
+                        <button data-button-action="3" class="btn btn-secondary change-extension-state">
                             Close
                         </button>
                     </p>
@@ -101,4 +104,61 @@
             </div>
         </div>
     </div>
+}
+
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+    <script>
+        $(() => {
+            let form = $("#reviewExtensionForm")[0];
+            let app = new Vue({
+                el: "#formUserFeedback",
+                data: {
+                    initialized: false,
+                    request: {
+                        loading: false,
+                        successful: false,
+                        title: "undefined",
+                        errorMsg: "undefined"
+                    }
+                }
+            });
+
+            var attrName = "data-button-action";
+
+            $(`button[${attrName}]`).on("click", e => {
+                var action = $(e.currentTarget).attr(attrName);
+
+                if (!app.request.loading) {
+                    var formData = new FormData(form);
+
+                    $.ajax({
+                        type: "POST",
+                        url: "/api/extension_request/change_state",
+                        processData: false,
+                        contentType: false,
+                        cache: false,
+                        data: formData,
+                        beforeSend: xhr => {
+                            app.request.loading = true;
+                        },
+                        success: (r, xhr) => {
+                            app.request.loading = false;
+                            app.request.successful = true;
+                            app.request.title = $("#Input_Title").val();
+                            form.reset();
+                        },
+                        error: (xhr, textStatus, errorThrown) => {
+                            app.request.loading = false;
+                            app.request.successful = false;
+                            app.request.errorMsg = xhr.responseText;
+                        },
+                        complete: (xhr) => {
+                            app.initialized = true;
+                        }
+                    });
+                }
+            });
+        });
+    </script>
 }
